--- a/src/react-components/Profile/profile.css
+++ b/src/react-components/Profile/profile.css
@@ -3,6 +3,7 @@
     margin-bottom: 20px ;
     margin-left: 50px;
     /* background-color: antiquewhite; */
+    
 
 }
 .box{
@@ -27,7 +28,7 @@
  
     border-radius: 10px;
     background-color: antiquewhite;
-    
+    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
     margin: 10px;
     padding: 10px;
 }
